--- a/AnthillNet/AnthillNet.csproj
+++ b/AnthillNet/AnthillNet.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\LoggingPriority.cs" />
+    <Compile Include="API\NetworkLog.cs" />
+    <Compile Include="API\Message.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="API\Connection.cs" />
     <Compile Include="API\NetworkBase.cs" />
