--- a/AnthillNet/AnthillNet.csproj
+++ b/AnthillNet/AnthillNet.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net45</TargetFrameworks>
     <LangVersion>8</LangVersion>
     <Authors>Crawcik</Authors>
     <Product />
@@ -9,6 +9,7 @@
     <Copyright>GNU General Public License v2.0</Copyright>
     <PackageProjectUrl>https://github.com/Crawcik/AnthillNet</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Crawcik/AnthillNet</RepositoryUrl>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Flax\**" />
