--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -45,7 +45,7 @@ jobs:
               echo "file_name=TestReport.${{steps.PRNUMBER.outputs.pr}}.${{github.run_number}}.md" >> $GITHUB_ENV
            else
               echo "::set-env name=title::Test Run ${{github.run_number}}"
--             echo "::set-env name=file_name::TestReport.${{github.run_number}}.md"
+              echo "::set-env name=file_name::TestReport.${{github.run_number}}.md"
               echo "title=Test Run ${{github.run_number}}" >> $GITHUB_ENV
               echo "file_name=TestReport.${{github.run_number}}.md" >> $GITHUB_ENV
            fi
