--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,20 +7,20 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
     
-    - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1
+    - name: Setup Dotnet
+      uses: actions/setup-dotnet@v1
       
     - name: Install dependencies
       run: dotnet restore
       
     - name: Build Solution
       run: |
-        msbuild.exe AnthillNet.sln /nologo /nr:false /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:platform="Any CPU" /p:configuration="Release" /p:PublishUrl="../_build"
+        dotnet build AnthillNet.sln
   test:
     runs-on: windows-latest
     needs: build
@@ -35,34 +35,10 @@ jobs:
       if: ${{ github.event_name == 'pull_request' }}
       uses: kkak10/pr-number-action@v1.3
 
-    - name: Set Test Title
-      run: |
-           if ${{ github.event_name == 'pull_request' }}
-           then
-              echo "::set-env name=title::Test Run for PR #${{steps.PRNUMBER.outputs.pr}} (${{github.run_number}})"
-              echo "::set-env name=file_name::TestReport.${{steps.PRNUMBER.outputs.pr}}.${{github.run_number}}.md"
-              echo "title=Test Run for PR #${{steps.PRNUMBER.outputs.pr}} (${{github.run_number}})" >> $GITHUB_ENV
-              echo "file_name=TestReport.${{steps.PRNUMBER.outputs.pr}}.${{github.run_number}}.md" >> $GITHUB_ENV
-           else
-              echo "::set-env name=title::Test Run ${{github.run_number}}"
-              echo "::set-env name=file_name::TestReport.${{github.run_number}}.md"
-              echo "title=Test Run ${{github.run_number}}" >> $GITHUB_ENV
-              echo "file_name=TestReport.${{github.run_number}}.md" >> $GITHUB_ENV
-           fi
-    - name: Run TCP Test
-      run: dotnet test TestingLab.csproj --no-build --no-restore  --configuration $config --logger:"liquid.md;LogFileName=${{github.workspace}}/${{env.file_name}};Title=${{env.title}};"
-
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v2
-      if: ${{always()}}
+    - name: TCP Test
+      uses: zyborg/dotnet-tests-report@v1
       with:
-        name: 'Test Run'
-        path: ${{github.workspace}}/${{env.file_name}}
-
-    - name: comment PR
-      uses: machine-learning-apps/pr-comment@master
-      if: ${{ github.event_name == 'pull_request' }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        path: ${{env.file_name}}
+        project_path: TestingLab
+        report_name: TCP Test #${{steps.PRNUMBER.outputs.pr}} (${{github.run_number}})"
+        report_title: AnthillNet Test
+        github_token: ${{ secrets.GITHUB_TOKEN }}
